--- a/debian/control
+++ b/debian/control
@@ -1,8 +1,7 @@
 Source: se-vpn
 Section: net
 Priority: optional
-Maintainer: Dmitry Orlov <me@mosquito.su>
-Build-Depends: debhelper (>= 7.0.50~), libncurses-dev, linux-libc-dev, libssl-dev, libreadline-dev, build-essential, dh-exec
+Build-Depends: debhelper (>= 7.0.50~), libncurses-dev, linux-libc-dev, libssl-dev (>= 1.0~), libreadline-dev (>= 6.0~), build-essential, dh-exec
 Standards-Version: 3.9.1
 Homepage: http://www.softether.org/
 
@@ -11,34 +10,9 @@ Architecture: amd64
 Depends: ${misc:Depends}, ${shlibs:Depends}
 Section: net
 Description: Command line utils
- An Open-Source Free Cross-platform Multi-protocol VPN Program, as an academic project from University of Tsukuba.
- SoftEther VPN ("SoftEther" means "Software Ethernet") is one of the world's most
- powerful and easy-to-use multi-protocol VPN software.
- It runs on Windows, Linux, Mac, FreeBSD and Solaris.
- SoftEther VPN is open source. You can use SoftEther for any
- personal or commercial use for free charge.
- SoftEther VPN is an optimum alternative to
- OpenVPN and Microsoft's VPN servers. SoftEther VPN
- has a clone-function of OpenVPN Server.
- You can integrate from OpenVPN to SoftEther VPN smoothly.
- SoftEther VPN is faster than OpenVPN.
- SoftEther VPN also supports Microsoft SSTP VPN for Windows Vista / 7 / 8.
 
 Package: se-vpnserver
 Architecture: amd64
 Depends: ${misc:Depends}, ${shlibs:Depends}, se-vpncmd
 Section: net
 Description: VPN Server daemon
- An Open-Source Free Cross-platform Multi-protocol VPN Program, as an academic project from University of Tsukuba.
- SoftEther VPN ("SoftEther" means "Software Ethernet") is one of the world's most
- powerful and easy-to-use multi-protocol VPN software.
- It runs on Windows, Linux, Mac, FreeBSD and Solaris.
- SoftEther VPN is open source. You can use SoftEther for any
- personal or commercial use for free charge.
- SoftEther VPN is an optimum alternative to
- OpenVPN and Microsoft's VPN servers. SoftEther VPN
- has a clone-function of OpenVPN Server.
- You can integrate from OpenVPN to SoftEther VPN smoothly.
- SoftEther VPN is faster than OpenVPN.
- SoftEther VPN also supports Microsoft SSTP VPN for Windows Vista / 7 / 8.
- IKEv2 is also supported.
